--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.2",
+    "tr-currency": "^18.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
